Stage 20D: align physical edge catalog with exact implementation